# objstash

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  stash.md
.github/workflows/: ci.yml
docs/adr/: ADR-0001-storage-schema.md  ADR-0002-serialization-codecs.md  ADR-0003-nested-namespaces.md  ADR-0004-mutation-proxies.md  ADR-0005-batch-transactions.md  ADR-0006-ext-module-and-cache.md
examples/: README.md  cli_state.py  persistent_cache.py  resumable_job.py
objstash/: __init__.py  _codecs.py  _exceptions.py  _namespace.py  _proxies.py  _stash.py  _store.py
tests/: test_batch.py  test_codecs.py  test_namespace.py  test_proxies.py  test_stash.py  test_store.py
